--- a/chat/style.css
+++ b/chat/style.css
@@ -27,8 +27,7 @@ section.welcome {
     color: white;
     border-radius: 15px;
     padding: 20px;
-    left: 50%;
-    margin-left: -289px;
+    left: 95px;
     top: 70px;
     box-shadow: 3px 3px 5px #CCC;
 
