--- a/safari/main.css
+++ b/safari/main.css
@@ -14,7 +14,7 @@ body {
     margin-top: 0px;
     width: auto;
     margin-right: 0px;
-    background-image: url(Images/header%201.png);
+    background-image: url(Images/footer.png);
     height: 213px;
     border-width: 0px !important;
     background-position: 50% 50%;
@@ -1880,4 +1880,15 @@ body {
     height: 30px;
     margin-top: -18px;
     margin-left: 5px;
+}
+
+#noscript {
+    text-overflow: clip;
+    overflow: hidden;
+    letter-spacing: 0px;
+    color: rgb(255, 255, 255);
+    text-shadow: none;
+    font-size: 15px;
+    text-align: right;
+    padding: 15px;
 }
